Archive2/8d/9cdf1fd4c3e8cc/output
main.cpp:29:5: error: must use 'class' tag to refer to type 'time' in this scope
    time to;
    ^
    class 
/usr/include/time.h:186:15: note: class 'time' is hidden by a non-type declaration of 'time' here
extern time_t time (time_t *__timer) __THROW;
              ^
main.cpp:31:5: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
    cout << to.getSeconds() << endl;
    ^~~~
    std::cout
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/iostream:61:18: note: 'std::cout' declared here
  extern ostream cout;          /// Linked to standard output
                 ^
main.cpp:31:32: error: use of undeclared identifier 'endl'; did you mean 'std::endl'?
    cout << to.getSeconds() << endl;
                               ^~~~
                               std::endl
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:564:5: note: 'std::endl' declared here
    endl(basic_ostream<_CharT, _Traits>& __os)
    ^
main.cpp:9:9: warning: private field 'mins' is not used [-Wunused-private-field]
    int mins;
        ^
main.cpp:10:9: warning: private field 'hours' is not used [-Wunused-private-field]
    int hours;
        ^
2 warnings and 3 errors generated.
